# tiny-audio-player

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs
src/app/: application.rs  mod.rs  process_message_listener.rs
src/audio/: audio_player.rs  mod.rs  sound_data.rs
src/layouts/: main_layout.rs
src/misc/: config_manger.rs  mod.rs  settings.rs
src/theme/: style.rs  theme.rs
src/widgets/: mod.rs  track_pos_slider.rs
