[package]
name = "tiny-audio-player"
version = "1.0.0"
edition = "2021"
authors = ["Alexander Tretyakov"]
license = "MIT"

[dependencies]
iced = {version = "0.12.1", features = ["advanced"]}
native-dialog = "0.7.0"
kira = "0.9.0"
symphonia = {version = "0.5.4", features = ["all-formats"]}
toml = "0.8.13"
serde = { version = "1.0.202", features = ["derive"] }