[package]
name = "tiny-audio-player"
version = "1.0.0"
edition = "2021"
authors = ["Alexander Tretyakov"]
license = "MIT"

[dependencies]
iced = {version = "0.13.1", features = ["advanced", "svg", "smol"]}
native-dialog = "0.7.0"
kira = "0.10.3"
symphonia = {version = "0.5.4", features = ["all-formats"]}
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
chrono = "0.4.39"